// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfilePhoto /> renders custom size 1`] = `
<div
  className="f18bir32"
>
  <img
    alt="Name"
    className="fdpqx7e"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders inline 1`] = `
<div
  className="f1mqa9uw"
>
  <img
    alt="Name"
    className="f1hbk716"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders large 1`] = `
<div
  className="f6nanb2"
>
  <img
    alt="Name"
    className="f1b31zkq"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders macro 1`] = `
<div
  className="f1j852ta"
>
  <img
    alt="Name"
    className="fbm7oyi"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders small 1`] = `
<div
  className="f1fmsgf2"
>
  <img
    alt="Name"
    className="foew6u2"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders with the expected props (but not necessarily with the expected styles) 1`] = `
<div
  className="f53a1r2"
>
  <img
    alt="Name"
    className="f1hbk716"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;
